--- a/Remage/Storyboards/Reminders.storyboard
+++ b/Remage/Storyboards/Reminders.storyboard
@@ -19,7 +19,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JSR-jW-s61">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="5" minimumInteritemSpacing="5" id="m8k-QE-PcC">
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="5" id="m8k-QE-PcC">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -27,27 +27,28 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="reminderCell" id="e5s-5r-Km8" customClass="ReminderCollectionViewCell" customModule="Remage" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="20" width="100" height="135"/>
+                                        <rect key="frame" x="20" y="20" width="120" height="145.5"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="jAV-s3-pos" customClass="ReminderCollectionViewCell" customModule="Remage" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="135"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="120" height="145.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
                                                 <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BCR-0w-R9C">
-                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="135"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="120" height="145.5"/>
                                                     <subviews>
                                                         <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="WAf-b4-PpO">
-                                                            <rect key="frame" x="0.0" y="0.0" width="100" height="135"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="120" height="145.5"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vn6-Gw-s3g">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                                                     <color key="backgroundColor" red="1" green="0.3411764706" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" secondItem="vn6-Gw-s3g" secondAttribute="height" multiplier="1:1" id="7Ss-xK-HE9"/>
+                                                                        <constraint firstAttribute="height" constant="120" id="GNA-Xm-bcZ"/>
                                                                     </constraints>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xuD-lP-pNR">
-                                                                    <rect key="frame" x="0.0" y="105" width="100" height="30"/>
+                                                                    <rect key="frame" x="0.0" y="125" width="120" height="20.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -57,9 +58,8 @@
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstItem="WAf-b4-PpO" firstAttribute="top" secondItem="BCR-0w-R9C" secondAttribute="top" id="5Ij-ju-3od"/>
-                                                        <constraint firstAttribute="width" constant="100" id="BQ0-YW-aR1"/>
+                                                        <constraint firstAttribute="width" constant="120" id="BQ0-YW-aR1"/>
                                                         <constraint firstAttribute="trailing" secondItem="WAf-b4-PpO" secondAttribute="trailing" id="Epx-Vr-k24"/>
-                                                        <constraint firstAttribute="height" constant="135" id="LFL-Sk-PFc"/>
                                                         <constraint firstAttribute="bottom" secondItem="WAf-b4-PpO" secondAttribute="bottom" id="Zgs-N4-EzU"/>
                                                         <constraint firstItem="WAf-b4-PpO" firstAttribute="leading" secondItem="BCR-0w-R9C" secondAttribute="leading" id="stt-J1-849"/>
                                                     </constraints>
