--- a/Remage/Storyboards/NewReminder.storyboard
+++ b/Remage/Storyboards/NewReminder.storyboard
@@ -496,29 +496,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bPT-iL-haa">
-                                <rect key="frame" x="0.0" y="56" width="414" height="856"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="912"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xDT-XF-xbP">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="839"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="674"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="8LM-9N-7ek">
-                                                <rect key="frame" x="20" y="20" width="374" height="654"/>
+                                                <rect key="frame" x="0.0" y="20" width="414" height="654"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Write a Note" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xin-uA-StC">
-                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="24"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="24"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ma-rj-0Xn">
-                                                        <rect key="frame" x="0.0" y="54" width="374" height="600"/>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ma-rj-0Xn">
+                                                        <rect key="frame" x="0.0" y="54" width="414" height="600"/>
                                                         <subviews>
                                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aEo-ms-qQw">
-                                                                <rect key="frame" x="20" y="20" width="334" height="560"/>
+                                                                <rect key="frame" x="20" y="20" width="374" height="560"/>
                                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                                <constraints>
-                                                                    <constraint firstAttribute="height" constant="560" id="rkn-bU-iS2"/>
-                                                                </constraints>
                                                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                                 <color key="textColor" systemColor="labelColor"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -535,23 +532,13 @@
                                                     </view>
                                                 </subviews>
                                             </stackView>
-                                            <view contentMode="scaleToFill" horizontalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="AtX-EY-iMt">
-                                                <rect key="frame" x="0.0" y="689" width="414" height="150"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="150" id="bA5-eT-G7D"/>
-                                                </constraints>
-                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstItem="AtX-EY-iMt" firstAttribute="leading" secondItem="xDT-XF-xbP" secondAttribute="leading" id="4b1-my-CM6"/>
-                                            <constraint firstAttribute="trailing" secondItem="AtX-EY-iMt" secondAttribute="trailing" id="GlY-iU-KJY"/>
-                                            <constraint firstItem="8LM-9N-7ek" firstAttribute="leading" secondItem="xDT-XF-xbP" secondAttribute="leading" constant="20" id="NMv-BP-Ytq"/>
-                                            <constraint firstAttribute="trailing" secondItem="8LM-9N-7ek" secondAttribute="trailing" constant="20" id="X4V-1g-oPn"/>
-                                            <constraint firstItem="AtX-EY-iMt" firstAttribute="top" secondItem="8LM-9N-7ek" secondAttribute="bottom" constant="15" id="ek0-ou-J5F"/>
+                                            <constraint firstItem="8LM-9N-7ek" firstAttribute="leading" secondItem="xDT-XF-xbP" secondAttribute="leading" id="NMv-BP-Ytq"/>
+                                            <constraint firstAttribute="bottom" secondItem="8LM-9N-7ek" secondAttribute="bottom" id="NlL-FX-DF8"/>
+                                            <constraint firstAttribute="trailing" secondItem="8LM-9N-7ek" secondAttribute="trailing" id="X4V-1g-oPn"/>
                                             <constraint firstItem="8LM-9N-7ek" firstAttribute="top" secondItem="xDT-XF-xbP" secondAttribute="top" constant="20" id="hFE-wK-hiA"/>
-                                            <constraint firstAttribute="bottom" secondItem="AtX-EY-iMt" secondAttribute="bottom" id="uTu-83-qz9"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -586,7 +573,6 @@
                         <outlet property="addNoteLabel" destination="Xin-uA-StC" id="Ral-E0-qcd"/>
                         <outlet property="backgroundCardView" destination="3ma-rj-0Xn" id="3a6-sb-8re"/>
                         <outlet property="noteTextView" destination="aEo-ms-qQw" id="vPF-h9-0en"/>
-                        <outlet property="scrollPushingView" destination="AtX-EY-iMt" id="siH-yQ-7f0"/>
                         <outlet property="scrollSubView" destination="xDT-XF-xbP" id="Gqo-Xe-pt6"/>
                     </connections>
                 </viewController>
